# build QxtGlobalShortcut lib
if (NOT qxtglobalshortcut_FOUND)
    set(SOURCE_FILES ${SOURCE_FILES} ${CMAKE_SOURCE_DIR}/3rdparty/libqxt/src/widgets/qxtglobalshortcut.cpp)
    if (WIN32)
        set(SOURCE_FILES ${SOURCE_FILES} ${CMAKE_SOURCE_DIR}/3rdparty/libqxt/src/widgets/win/qxtglobalshortcut_win.cpp)
    elseif(APPLE)
        set(SOURCE_FILES ${SOURCE_FILES} ${CMAKE_SOURCE_DIR}/3rdparty/libqxt/src/widgets/mac/qxtglobalshortcut_mac.cpp)
    elseif(UNIX)
        set(SOURCE_FILES ${SOURCE_FILES} ${CMAKE_SOURCE_DIR}/3rdparty/libqxt/src/widgets/x11/qxtglobalshortcut_x11.cpp)
    endif()
    add_definitions(-DBUILD_QXT_CORE -DBUILD_QXT_GUI -DQXT_STATIC)
    include_directories(SYSTEM ${CMAKE_SOURCE_DIR}/3rdparty/libqxt/src/core)
    include_directories(SYSTEM ${CMAKE_SOURCE_DIR}/3rdparty/libqxt/src/widgets/)
    include_directories(SYSTEM ${Qt5Gui_PRIVATE_INCLUDE_DIRS})
    add_library(qxtglobalshortcut STATIC ${SOURCE_FILES})
    target_link_libraries(qxtglobalshortcut Qt5::Core Qt5::Widgets)
    if(UNIX)
        find_package(X11)
        target_link_libraries(qxtglobalshortcut ${X11_LIBRARIES})
    endif()
endif()


add_subdirectory(Domain)
add_subdirectory(Infrastructure)
add_subdirectory(Presentation)
